<resources>
    <string name="app_name">FeedMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="search">Not implemented yet</string>

    <!-- Feed me -->
    <string name="logo">Feed Me</string>

    <!-- inscription/profil/login -->
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="profil">Profil</string>
    <string name="logout">Déconnexion</string>
    <string name="rechercher">Rechercher un repas</string>
    <string name="reservation">Réserver un couvert</string>
    <string name="deposer">Proposer un repas</string>
    <string name="lastname">Nom</string>
    <string name="name">Prénom</string>
    <string name="password">Mot de passe</string>
    <string name="confirmpassword">Confirmer le mot de passe</string>
    <string name="email">Adresse e-mail</string>
    <string name="birthdate">Date de naissance</string>
    <string name="age">Age</string>
    <string name="validCGU">En confirmant l\'inscription vous acceptez les CGU</string>
    <string name="validation">Confirmer</string>
    <string name="id">Identifiant</string>
    <string name="champVide">Merci de remplir tous les champs</string>
    <string name="passwordIncompatible">Les mots de passe ne coresspondent pas</string>
    <string name="loginIncorrect">Combinaison mot de passse/identifiant inconnu !</string>
    <string name="notFound">User not found or multiple proposition</string>
    <!-- annonces -->
    <string name="title">Titre</string>
    <string name="nombreinvite">Nombre de places</string>
    <string name="remainplace">Nombre de places restantes</string>
    <string name="Price">Prix</string>
    <string name="address">Adresse</string>
    <string name="street">Voie</string>
    <string name="city">Ville</string>
    <string name="codepostal">Code Postal</string>
    <string name="country">Pays</string>
    <string name="date">Date</string>
    <string name="menu">Menu</string>
    <string name="duration">Durée</string>
    <string name="agebracket">Tranche d\'âge souhaitée</string>
    <string name="type">Type de cuisine</string>
    <string name="notes">Notes</string>
    <string name="pet">Présence d\'un animal</string>
    <string name="valid">Valider</string>
    <string name="templateDate">jj/mm/aaaa</string>
    <string name="trancheAge">min-max</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_login">Connection</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="notanemail">Not a valid email</string>
    <string name="paysnotfound">Pays note found in database</string>
    <string name="typecuisinenotfound">Type cuisine not found in database</string>
    <string name="reservationNotFound">Unable to found list of reservation</string>
    <string name="offreNotFound">Unbale to find offre or multiple proposition</string>
    <string name="particulierNotFound">Cannot get particulier from database</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="mustbeInferiorOrEqual">Le champ doit être inférieur ou egal au nombre de place restantes</string>
    <string name="exampleMail">example@mail.com</string>
    <string name="nothing">Aucune offre à ce jour</string>
    <string name="title_activity_maps">Map</string>
    <string name="addressnotfound">Imposible de localiser cette adresse</string>
</resources>
