<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETtitle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/title"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#999999"
                android:textSize="14dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/nombreinvite"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETnbpeople"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:hint="@string/nombreinvite"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#999999"
                android:textSize="14dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/Price"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETprice"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/Price"
                android:padding="5dip"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#999999"
                android:textSize="14dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="14dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/street"
                    android:textColor="#000000"
                    android:textSize="14dip" />

                <EditText
                    android:id="@+id/ETstreet"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/street"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColor="#999999"
                    android:textSize="14dip" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/city"
                    android:textColor="#000000"
                    android:textSize="14dip" />

                <AutoCompleteTextView
                    android:id="@+id/ETcity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/city"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColor="#999999"
                    android:textSize="14dip" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/codepostal"
                    android:textColor="#000000"
                    android:textSize="14dip" />

                <EditText
                    android:id="@+id/ETcp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/codepostal"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColor="#999999"
                    android:textSize="14dip" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/country"
                    android:textColor="#000000"
                    android:textSize="14dip" />

                <Spinner
                    android:id="@+id/Spays"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/TVDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ETDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:hint="@string/templateDate"
                    android:inputType="date"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColor="#999999"
                    android:textSize="14sp" />


            </LinearLayout>

            <ImageButton
                android:id="@+id/IBCalendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/menu"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETmenu"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/menu"
                android:padding="5dip"
                android:singleLine="false"
                android:textColor="#999999"
                android:textSize="14dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/type"
                android:textColor="#000000"
                android:textSize="14dip" />

            <Spinner
                android:id="@+id/Stype"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/duration"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETduration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/duration"
                android:inputType="number"
                android:padding="5dip"
                android:singleLine="false"
                android:textColor="#999999"
                android:textSize="14dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/agebracket"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETageback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/trancheAge"
                android:padding="5dip"
                android:singleLine="false"
                android:textColor="#999999"
                android:textSize="14dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/notes"
                android:textColor="#000000"
                android:textSize="14dip" />

            <EditText
                android:id="@+id/ETnotes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/notes"
                android:padding="5dip"
                android:singleLine="false"
                android:textColor="#999999"
                android:textSize="14dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/CBpets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet" />

            <Button
                android:id="@+id/Bconfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/validation" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>