<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/id"
        android:textColor="#000000"
        android:textSize="14dip" />

    <EditText
        android:id="@+id/ETid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/id"
        android:padding="5dip"
        android:singleLine="true"
        android:textColor="#999999"
        android:textSize="14dip" />
</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="14dip" />

    <EditText
        android:id="@+id/ETloginpassword"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:padding="5dip"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#999999"
        android:textSize="14dip" />
</LinearLayout>



<Button
    android:id="@+id/Bvalid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:text="@string/validation" />

</LinearLayout>